Thu Feb 12 22:51:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (hide_obj): OBJ_FREEZE() is not an expression.  a patch
	  from nagachika <nagachika00 AT gmail.com> at [ruby-dev:37977].

	* compile.c (insn_set_sc_state): fixed typoe.

Thu Feb 12 19:42:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_array_, defined_expr, iseq_compile_each): hide
	  and freeze internal literal objects, to prevent from modifying.
	  [ruby-dev:37959]

	* iseq.c (insn_operand_intern): copy internal literal objects.

	* insns.def (putstring, duparray): ditto.

	* string.c (rb_str_replace): exported.

Thu Feb 12 17:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_ungetc): calculates new position
	  before reallocation.  [Bug#1099]

Mon Feb  9 20:11:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c (load_conv_function51932): fixed for the
	  case IMultiLanguage is not available.  [ruby-dev:37950]

Mon Feb  9 11:31:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): ignore second argument when external and
	  internal are same. [ruby-dev:37939]

Sun Feb  8 23:28:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* include/ruby/st.h, st.c: order entries by a linked list instead of
	  a loop to fix iteration miss when hash is modified during iteration.
	  [ruby-dev:37910]

Sun Feb  8 22:44:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h (rb_thread_blocking_region_begin),
	  (rb_thread_blocking_region_end): marked as deprecated.

	* include/ruby/backward/rubysig.h (TRAP_BEG): fix for C++.  a
	  patch from Aman Gupta at [ruby-core:21934]

Sun Feb  8 19:05:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h: extern "C" was missing.
	  [ruby-core:21929]

Sun Feb  8 18:34:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_binread): ensures file path.  [ruby-dev:37940]
